# clang-db

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  ReadMe.md
.github/workflows/: main.yml
clang_db/: __init__.py  builder.py  cctype.py  common.py  decl.py  generic.py  parsing.py
include/: CMakeLists.txt  ast.h  clangdb.h  common.h  context.h  explain.h  storage.h  testing.h  typing.h
script/: check-db.py  ci-format.sh  ci-init.sh  ci-reg-test.sh  ci-test.sh  ci-tidy.sh  format.sh  gen-hdr.sh
src/: CMakeLists.txt  ast.cc  context.cc  explain.cc  iterator.cc  storage.cc  typing.cc
test/: CMakeLists.txt  func_test.cc  linkage_test.cc  nest_test.cc  record_test.cc  sanity_test.cc  storage_test.cc  sym_test.cc  test.h  tmpl_test.cc  typ_test.cc  typeop_test.cc  util_test.cc
test/resource/: record.cc
