file(GLOB_RECURSE CLANGDB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")

set(CLANGDB_AMALGAMATION_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/clangdb-sys.h")

add_custom_command(OUTPUT "${CLANGDB_AMALGAMATION_HEADER}"
  COMMAND sh script/gen-hdr.sh clangdb
  DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/../script/gen-hdr.sh" ${CLANGDB_HEADERS}
  WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/.."
)

set_source_files_properties("${CLANGDB_AMALGAMATION_HEADER}" PROPERTIES GENERATED TRUE)
add_library(clangdb-aux OBJECT ${CLANGDB_AMALGAMATION_HEADER})

